# tex-extractor

./: LICENSE.txt  README.md  setup.cfg
src/extractor/: __init__.py  texextractor.py
src/texextractor/: __init__.py  main.py
src/texextractor/data/: paper.tex
