[metadata]
name = texextractor
version = 0.0.1
author = Benedikt Zoennchen
author_email = benedikt.zoennchen@web.de
description = extracts content from a LateX-file
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src